<resources>
    <string name="app_name">Task Manager</string>

    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="task_description">Write Task Description</string>
    <string name="task_name">Write Task Name</string>
    <string name="next_day">Next Day</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
